# backend/extension/extension/views/search_view.py
@@ -1,6 +1,6 @@
 from django.http import JsonResponse
 from django.views.decorators.csrf import csrf_exempt
-from ..models import Airline, Place, Search, User
+from ..models import  Place, Search, User
 from django.core.exceptions import ObjectDoesNotExist
 
 # Views for Search model
@@ -8,19 +8,18 @@ from django.core.exceptions import ObjectDoesNotExist
 def search_list(request):
     if request.method == 'GET':
         searches = Search.objects.all()
-        data = [{'id': search.id, 'sustainability_score': search.sustainability_score, 'airline_id': search.airline_id, 'origin_id': search.origin_id, 'destination_id': search.destination_id, 'flight_duration': search.flight_duration} for search in searches]
+        data = [{'id': search.id, 'sustainability_score': search.sustainability_score, 'origin_id': search.origin_id, 'destination_id': search.destination_id, 'flight_duration': search.flight_duration} for search in searches]
         return JsonResponse(data, safe=False)
     
     elif request.method == 'POST':
         search_data = {
             'sustainability_score': request.POST.get('sustainability_score'),
-            'airline_id': request.POST.get('airline_id'),
             'origin_id': request.POST.get('origin_id'),
             'destination_id': request.POST.get('destination_id'),
             'flight_duration': request.POST.get('flight_duration')
         }
         search = Search.objects.create(**search_data)
-        return JsonResponse({'id': search.id, 'sustainability_score': search.sustainability_score, 'airline_id': search.airline_id, 'origin_id': search.origin_id, 'destination_id': search.destination_id, 'flight_duration': search.flight_duration})
+        return JsonResponse({'id': search.id, 'sustainability_score': search.sustainability_score, 'origin_id': search.origin_id, 'destination_id': search.destination_id, 'flight_duration': search.flight_duration})
 
 @csrf_exempt
 def search_detail(request, pk):
@@ -30,12 +29,11 @@ def search_detail(request, pk):
         return JsonResponse({'error': 'Search does not exist'}, status=404)
     
     if request.method == 'GET':
-        data = {'id': search.id, 'sustainability_score': search.sustainability_score, 'airline_id': search.airline_id, 'origin_id': search.origin_id, 'destination_id': search.destination_id, 'flight_duration': search.flight_duration}
+        data = {'id': search.id, 'sustainability_score': search.sustainability_score, 'origin_id': search.origin_id, 'destination_id': search.destination_id, 'flight_duration': search.flight_duration}
         return JsonResponse(data)
     
     elif request.method == 'PUT':
         search.sustainability_score = request.POST.get('sustainability_score')
-        search.airline_id = request.POST.get('airline_id')
         search.origin_id = request.POST.get('origin_id')
         search.destination_id = request.POST.get('destination_id')
         search.flight_duration = request.POST.get('flight_duration')
